feat: Remove executeScript method and related API endpoints from WebScraper and TabManager services
